fix(layout): improve whitespace

--- a/src/components/layout/Page.scss
+++ b/src/components/layout/Page.scss
@@ -4,7 +4,6 @@
     
 
     width: 100%;
-    margin-top: 1rem;
 
     display: flex;
     flex-wrap: wrap;
